--- a/content/home.html
+++ b/content/home.html
@@ -11,16 +11,19 @@
         <div style="font-size:larger; margin-left: 50px">Transform</div>
     </div>
 </div>
-<div>
-    <h2>Philosophy</h2>
-    <blockquote>If a solution does not exist yet, it does not mean there will never be any, but that it still has to be invented.</blockquote>
-    Wokhan Solutions applications have been created when no convincing alternatives exist, and were not only created for users but also because of real personal needs.
+<div class="homelayout">
+    <div class="leftcolumn">
+        <h2>Philosophy</h2>
+        <blockquote>If a solution does not exist yet, it does not mean there will never be any, but that it still has to be invented.</blockquote>
+        Wokhan Solutions applications have been created when no convincing alternatives exist, and were not only created for users but also because of real personal needs.
 
-    <h2>What you will find here</h2>
-    This site only presents a subset of what has been created by Wokhan Solutions. Some are deprecated (see the Archives page), others are simply not ready for a public release (and are kept secret as of now! ;-) ).
-    As everything alive, content will not remain static and will evolve for the years to come.
-
-    <h2>Latest Tweets</h2>
-    <a class="twitter-timeline" data-lang="en" href="https://twitter.com/wokhansoft?ref_src=twsrc%5Etfw">Tweets by wokhansoft</a>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <h2>What you will find here</h2>
+        This site only presents a subset of what has been created by Wokhan Solutions. Some are deprecated (see the Archives page), others are simply not ready for a public release (and are kept secret as of now! ;-) ).
+        As everything alive, content will not remain static and will evolve for the years to come.
+    </div>
+    <div class="tweets">
+        <h2>Latest Tweets</h2>
+        <a class="twitter-timeline" data-lang="en" href="https://twitter.com/wokhansoft?ref_src=twsrc%5Etfw">Tweets by wokhansoft</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
 </div>
