Disabled cache bypass for local calls (maybe unnecessary anyway: to be investigated). Minor update on contents.

--- a/content/software_wfn.html
+++ b/content/software_wfn.html
@@ -5,7 +5,7 @@
     <h3>Free / Open-source</h3>
 </div>
             The reknown open-source Windows Firewall extender!<br />
-            Please note that WFN is maintained by the open-source community at GitHub, with the main developper now being <a href="https://github.com/AtlasHackert" target="_blank">Daniel Pharos</a>.
+            Please note that WFN is maintained by the open-source community at GitHub (well, not all of it, we're only 3 😉).
 <h2>How to get it</h2>
 WFN is available on <a href="http://www.github.com/wokhansoft/wfn">GitHub</a>
 <h2>Features</h2>
