--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style/style.css" />
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+    <script src="https://kit.fontawesome.com/ef44d9881b.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="serverless/core.js" defer data-serverless-script="normal" data-modules="menu,imageboard,external"></script>
 </head>
 <body>
@@ -23,20 +24,18 @@
                 </li>
             </ul>
         </div>
-        <div id="home" class="page" data-external-contentid="home" data-external-defer="true" data-modules-menu title="Home"></div>
-        <div id="software" title="Software" data-modules-menu>
+        <div id="home" class="page" data-external-contentid="home" data-external-defer="true" data-modules-menu title="Home" data-menu-image="fas fa-home"></div>
+        <div id="software" title="Software" data-modules-menu data-menu-image="far fa-window-restore">
             <div id="software_wfn" class="page" data-external-contentid="software_wfn" data-external-defer="true" data-modules-menu title="WFN" data-description="A simple yet powerful Windows embedded firewall extender" data-menu-image="content/assets/wfn.png"></div>
             <div id="software_tiles" class="page" data-external-contentid="software_tiles" data-external-defer="true" data-modules-menu title="Smart Tiles" data-description="The ultimate live tile for the Windows UWP calendar" data-menu-image="content/assets/tiles.png"></div>
             <div id="software_dwsd" class="page" data-external-contentid="software_dwsd" data-external-defer="true" data-modules-menu title="Dynamic Web Service Driver for LINQPad" data-description="An additional driver for the LINQPad tool" data-menu-image="content/assets/LINQPad.png"></div>
-            <div id="software_archives" class="page" data-external-contentid="software_archives" data-external-defer="true" data-modules-menu title="Archives" data-description="Oldies from Wokhan Solutions"></div>
+            <div id="software_archives" class="page" data-external-contentid="software_archives" data-external-defer="true" data-modules-menu title="Archives" data-description="Oldies from Wokhan Solutions" data-menu-image="fas fa-archive"></div>
         </div>
-        <div id="lab" class="page" data-modules-menu title="Lab">
-            <br />This section is not available yet.<br />
-        </div>
-        <div id="about" class="page" data-external-contentid="about" data-external-defer="true" data-modules-menu title="About"></div>
+        <div id="lab" class="page" data-external-contentid="lab" data-external-defer="true" data-modules-menu title="Lab" data-menu-image="fas fa-flask"></div>
+        <div id="about" class="page" data-external-contentid="about" data-external-defer="true" data-modules-menu title="About" data-menu-image="far fa-question-circle"></div>
     </div>
     <div class="footer">
-        &copy; Wokhan Solutions 2017 - All rights reserved.
+        &copy; Wokhan Solutions 2017 - All rights reserved. Hosted on GitHub 
         <div style="float:right; padding: 5px">
             <iframe title="Twitter Follow Button" class="twitter-follow-button twitter-follow-button-rendered" id="twitter-widget-0" src="https://platform.twitter.com/widgets/follow_button.c6def25548e9590b13abaa1b3330b811.en.html#dnt=false&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=wokhansoft&amp;show_count=false&amp;show_screen_name=true&amp;size=m&amp;time=1475776194226" frameborder="0" scrolling="no" style="width: 133px; height: 20px; visibility: visible; position: static;" allowtransparency="true" data-screen-name="wokhansoft"></iframe>
             <!--<script src="http://platform.twitter.com/widgets.js" charset="utf-8" async=""></script>-->
