Added documentation link for Wokhan.Core

--- a/content/lab.html
+++ b/content/lab.html
@@ -9,7 +9,7 @@ Wokhan Solutions librairies are now open source and available on GitHub, includi
 <h3>Wokhan.Core</h3>
 Sources: <a href="https://github.com/wokhansoft/Wokhan.Core" target="_blank">GitHub</a>
 <br/>
-Documentation: not available yet
+Documentation: <a href="https://docs.wokhan.com/Wokhan.Core/generated/Wokhan.Core.html" target="_blank">docs.wokhan.com</a>
 
 <h3>Wokhan.UI</h3>
 Sources: <a href="https://github.com/wokhansoft/Wokhan.UI" target="_blank">GitHub</a>
