--- a/content/software_archives.html
+++ b/content/software_archives.html
@@ -1,4 +1,5 @@
-﻿<h2>Archives</h2>
+﻿<h2><i class="fas fa-archive"></i>
+    Archives</h2>
 The following applications have been discontinued and are listed here for information only.<br />
 <h3>TaskTracker</h3>
 An application to automatically track your own PC use (applications, websites, documents...).
