--- a/content/software_dwsd.html
+++ b/content/software_dwsd.html
@@ -5,10 +5,10 @@
     <h3>Free / Open-source</h3>
 </div>
 An additional driver for <a href="http://www.linqpad.net" target="_blank">Joseph Albahari's LINQPad</a>, allowing to add almost any web service as a source.<br />
-<h2>How to get it</h2>
+<h2 class="getit">How to get it</h2>
 The LINQPad plugin is available <a href="content/assets/DynamicWebServiceDriver.lpx">here</a>.<br />
 Of course, the LINQPad application is required for this plugin to work.
-<h2>Screenshots</h2>
+<h2 class="screenshots">Screenshots</h2>
 <div data-module-imageboard data-imageboard-maxheight="300px">
     <img src="content/assets/WSDDBig.jpg" />
 </div>
