--- a/content/software_wfn.html
+++ b/content/software_wfn.html
@@ -6,9 +6,9 @@
 </div>
             The reknown open-source Windows Firewall extender!<br />
             Please note that WFN is maintained by the open-source community at GitHub (well, not all of it, we're only 3 😉).
-<h2>How to get it</h2>
+<h2 class="getit">How to get it</h2>
 WFN is available on <a href="http://www.github.com/wokhansoft/wfn">GitHub</a>
-<h2>Features</h2>
+<h2 class="features">Features</h2>
 <ul>
     <li>Connections listing</li>
     <li>Real time connections mapping with routes</li>
@@ -17,7 +17,7 @@ WFN is available on <a href="http://www.github.com/wokhansoft/wfn">GitHub</a>
     <li>Windows Firewall status management</li>
     <li>Notification popup for unknown outgoing connections (optional)</li>
 </ul>
-<h2>Screenshots</h2>
+<h2 class="screenshots">Screenshots</h2>
 <div data-module-imageboard>
     <img src="content/assets/wfn_scr1.png" title="Connections listing" />
     <img src="content/assets/wfn_scr2.png" title="Real time connections mapping with routes" />
