--- a/content/software_tiles.html
+++ b/content/software_tiles.html
@@ -7,26 +7,26 @@
             A highly customizable calendar / agenda tiles creation app for Windows 10 / Windows 10 mobile.<br />
 Never miss an appointment again with this Windows calendar (Outlook on mobile) tile replacement!<br />
 You can also display all your upcoming friends birthdays on your start screen and stop forgetting about those.<br />
-<h2>How to get it</h2>
+<h2 class="getit">How to get it</h2>
 Smart Tiles is available in the Microsoft Store, with a free 14 days trial available to make your own opinion.
 <div style="text-align:center">
     <a href="https://www.microsoft.com/store/apps/9NBLGGH4M2H5?ocid=badge">
         <img style="height:50px" alt="Get it on Windows 10" src="https://assets.windowsphone.com/f2f77ec7-9ba9-4850-9ebe-77e366d08adc/English_Get_it_Win_10_InvariantCulture_Default.png">
     </a>
 </div>
-<h2>Features</h2>
+<h2 class="features">Features</h2>
 <ul>
     <li>Live tile</li>
     <li>Various modes: calendar, agenda, birthdays...</li>
     <li>Dedicated birthday screen</li>
     <li>Highly customizable</li>
 </ul>
-<h2>Reviews</h2>
+<h2 class="reviews">Reviews</h2>
 <h3>Windows Central</h3>
             George Ponder reviewed a previous version on <a href="https://www.windowscentral.com/tiles-for-outlook-windows-10-review">Windows Central</a> and gave it an Oustanding note of 4.5/5!
 <h3>All About Windows Phone</h3>
             Steve Litchfield also reviewed it on May 15th 2017 <a href="http://allaboutwindowsphone.com/flow/item/22198_Mini-review_Tiles_for_Outlook.php">here</a>.
-<h2>Screenshots</h2>
+<h2 class="screenshots">Screenshots</h2>
 <div data-module-imageboard data-imageboard-maxheight="300px">
     <img src="content/assets/tiles/Desktop1EN.png" />
     <img src="content/assets/tiles/Desktop2EN.png" />
@@ -35,7 +35,7 @@ Smart Tiles is available in the Microsoft Store, with a free 14 days trial avail
     <img src="content/assets/tiles/Desktop5EN.png" />
     <img src="content/assets/tiles/Desktop6EN.png" />
 </div>
-<h2>Privacy policy</h2>
+<h2 class="privacy">Privacy policy</h2>
 Depending on the feature the user would like to use, the Smart Tiles application can access the following personal data:
 <ul>
     <li>Windows Calendar entries (including events details)
