Fix for the mobile view (< 900 px)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div id="container">
         <div id="fixedbg"></div>
         <div class="header">
-            <img height="50px" style="margin-right: 10px; vertical-align: top; display: inline-block;" src="content/assets/logo.png"><span style="text-align: left; display: inline-block"><span style="font-size: 1.3em; font-weight: bold; display: block;">Wokhan</span><span style="color: gray; font-size: 1.2em; font-weight: bold; margin-left: 30px; line-height: 10px; display: inline-block;">Solutions</span></span>
+            <div class="logo">
+                <img src="content/assets/logo.png" /><span style="text-align: left; display: inline-block"><span style="font-size: 1.3em; font-weight: bold; display: block;">Wokhan</span><span style="color: gray; font-size: 1.2em; font-weight: bold; margin-left: 30px; line-height: 10px; display: inline-block;">Solutions</span></span>
+            </div>
             <ul id="headermenu">
                 <li class="mobilemenu" id="menu">
                     <a id="menutoggleon" href="#menu"></a>
