--- a/content/about.html
+++ b/content/about.html
@@ -1,13 +1,16 @@
-﻿<h2><i class="fas fa-info"></i>
+<h2><i class="fas fa-info"></i>
     About Wokhan Solutions</h2>
-            Wokhan Solutions is not a company but the realization of a vision, aiming at sharing tools and applications but also various knowledge (in a near future...).<br />
-            As of now, Wokhan Solutions consists in one person, Jérôme Saliba (<a href="https://www.linkedin.com/in/jerome-saliba/" target="_blank">LinkedIn</a>) aka Khan (@wokhan on GitHub), Solutions Architect at Groupama G2S (with which this website is not affiliated nor linked in any way).<br />
+            Wokhan Solutions is not a company; everything you will find on this website has been developed during my freetime, and I wanted to keep that "Wokhan" moniker I've been using for years.
+<h2><i class="fas fa-info"></i>
+    About me</h2>
+            I am Jérôme Saliba, a former (?) geek who started "working" on computers and development in the 90's and never stopped, even if now it gets way more complicated to find time to keep exploring and delivering.<br />
+            More information here: <a href="https://www.linkedin.com/in/jerome-saliba/" target="_blank">LinkedIn</a> / <a href="http://www.github.com/wokhan" target="_blank">GitHub</a>
 <h2><i class="fas fa-balance-scale"></i>
-    Disclaimer</h2>
-            The information contained in this website is for general information purposes only. The information is provided by Wokhan Solutions and while we endeavour to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.<br />
-            In no event will we be liable for any loss or damage including without limitation, indirect or consequential loss or damage, or any loss or damage whatsoever arising from loss of data or profits arising out of, or in connection with, the use of this website.<br />
-            Through this website you are able to link to other websites which are not under the control of Wokhan Solutions. We have no control over the nature, content and availability of those sites. The inclusion of any links does not necessarily imply a recommendation or endorse the views expressed within them.<br />
-            Every effort is made to keep the website up and running smoothly. However, Wokhan Solutions takes no responsibility for, and will not be liable for, the website being temporarily unavailable due to technical issues beyond our control.
+    Disclaimer (a pretty standard one)</h2>
+            The information contained in this website is for general information purposes only. The information is provided by Wokhan Solutions / Jérôme Saliba and while I endeavour to keep the information up to date and correct, I make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.<br />
+            In no event will I be liable for any loss or damage including without limitation, indirect or consequential loss or damage, or any loss or damage whatsoever arising from loss of data or profits arising out of, or in connection with, the use of this website.<br />
+            Through this website you are able to link to other websites which are not under the control of Wokhan Solutions / Jérôme Saliba. I have no control over the nature, content and availability of those sites. The inclusion of any links does not necessarily imply a recommendation or endorse the views expressed within them.<br />
+            Every effort is made to keep the website up and running smoothly. However, Wokhan Solutions / Jérôme Saliba takes no responsibility for, and will not be liable for, the website being temporarily unavailable due to technical issues beyond our control.
 <h2><i class="fas fa-user-secret"></i>
     Privacy policy</h2>
             This website does not use cookies nor any other mean to track you nor customize your experience.
@@ -16,6 +19,6 @@
             This website does not collect data in any form.
 <h2><i class="far fa-copyright"></i>
     Copyright</h2>
-            This website and its content is copyright of Wokhan Solutions and its author. All rights reserved.<br />
+            This website and its content is copyright of Wokhan Solutions and its sole member, Jérôme Saliba. All rights reserved.<br />
             Any redistribution or reproduction of part or all of the contents in any form is prohibited.<br />
-            You may not, except with our express written permission, distribute or commercially exploit the content. Nor may you transmit it or store it in any other website or other form of electronic retrieval system.<br />
+            You may not, except with my express written permission, distribute or commercially exploit the content. Nor may you transmit it or store it in any other website or other form of electronic retrieval system.<br />
