Minor update in the about page

--- a/content/about.html
+++ b/content/about.html
@@ -1,7 +1,7 @@
 <h2><i class="fas fa-info"></i>
     About Wokhan Solutions</h2>
             Wokhan Solutions is not a company; everything you will find on this website has been developed during my freetime, and I wanted to keep that "Wokhan" moniker I've been using for years.
-<h2><i class="fas fa-info"></i>
+<h2><i class="fas fa-id-card"></i>
     About me</h2>
             I am Jérôme Saliba, a former (?) geek who started "working" on computers and development in the 90's and never stopped, even if now it gets way more complicated to find time to keep exploring and delivering.<br />
             More information here: <a href="https://www.linkedin.com/in/jerome-saliba/" target="_blank">LinkedIn</a> / <a href="http://www.github.com/wokhan" target="_blank">GitHub</a>
