Modified the "Lab" page
... since it's not really a lab as I envisioned it at first 😄

--- a/content/lab.html
+++ b/content/lab.html
@@ -1,27 +1,21 @@
-﻿<h2><i class="fas fa-info"></i>
-    About the Lab</h2>
-You will find here technical components (mainly .Net libraries as of now), and, probably soon, links, articles... if I find some time to author them, that is 😁
+Wokhan Solutions librairies (used in all my apps) are open source and available on GitHub.
 
-<h2><i class="fas fa-layer-group"></i>
-    Librairies</h2>
-Wokhan Solutions librairies are now open source and available on GitHub, including:
-
-<h3>Wokhan.Core</h3>
+<h2>Wokhan.Core</h2>
 Sources: <a href="https://github.com/wokhansoft/Wokhan.Core" target="_blank">GitHub</a>
 <br/>
 Documentation: <a href="https://docs.wokhan.com/Wokhan.Core/generated/Wokhan.Core.html" target="_blank">docs.wokhan.com</a>
 
-<h3>Wokhan.UI</h3>
+<h2>Wokhan.UI</h2>
 Sources: <a href="https://github.com/wokhansoft/Wokhan.UI" target="_blank">GitHub</a>
 <br/>
 Documentation: not available yet
 
-<h3>Wokhan.DataProviders</h3>
+<h2>Wokhan.Data.Providers</h2>
 Coming soon!
 <br/>
 Documentation: not available yet
 
-<h3>Wokhan.WebControls</h3>
+<h2>Wokhan.WebControls</h2>
 Legacy library for ASP.NET.
 <br/>
 Sources: <a href="https://github.com/wokhansoft/Wokhan.WebControls" target="_blank">GitHub</a>
