Modified the Lab page title

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="software_dwsd" class="page" data-external-contentid="software_dwsd" data-external-defer="true" data-modules-menu title="Dynamic Web Service Driver for LINQPad" data-description="An additional driver for the LINQPad tool" data-menu-image="content/assets/LINQPad.png"></div>
             <div id="software_archives" class="page" data-external-contentid="software_archives" data-external-defer="true" data-modules-menu title="Archives" data-description="Oldies from Wokhan Solutions" data-menu-image="fas fa-archive"></div>
         </div>
-        <div id="lab" class="page" data-external-contentid="lab" data-external-defer="true" data-modules-menu title="Lab" data-menu-image="fas fa-flask"></div>
+        <div id="lab" class="page" data-external-contentid="lab" data-external-defer="true" data-modules-menu title="Libraries" data-menu-image="fas fa-toolbox"></div>
         <div id="about" class="page" data-external-contentid="about" data-external-defer="true" data-modules-menu title="About" data-menu-image="far fa-question-circle"></div>
     </div>
     <div class="footer">
