--- a/content/lab.html
+++ b/content/lab.html
@@ -11,9 +11,9 @@ Sources: <a href="https://github.com/wokhansoft/Wokhan.UI" target="_blank">GitHu
 Documentation: not available yet
 
 <h2>Wokhan.Data.Providers</h2>
-Coming soon!
+Sources: <a href="https://github.com/wokhansoft/Wokhan.Data.Providers" target="_blank">GitHub</a>
 <br/>
-Documentation: not available yet
+Documentation: <a href="https://docs.wokhan.com/Wokhan.Data.Providers/generated/Wokhan.Data.Providers.html" target="_blank">docs.wokhan.com</a>
 
 <h2>Wokhan.WebControls</h2>
 Legacy library for ASP.NET.
