--- a/content/lab.html
+++ b/content/lab.html
@@ -1,23 +1,23 @@
 Wokhan Solutions librairies (used in all my apps) are open source and available on GitHub.
 
 <h2>Wokhan.Core</h2>
-Sources: <a href="https://github.com/wokhansoft/Wokhan.Core" target="_blank">GitHub</a>
+Sources: <a href="https://github.com/wokhan/Wokhan.Core" target="_blank">GitHub</a>
 <br/>
-Documentation: <a href="https://docs.wokhan.com/Wokhan.Core/generated/Wokhan.Core.html" target="_blank">docs.wokhan.com</a>
+Documentation: <a href="https://wokhan.github.io/Wokhan.Core/generated/Wokhan.Core.html" target="_blank">here</a>
 
 <h2>Wokhan.UI</h2>
-Sources: <a href="https://github.com/wokhansoft/Wokhan.UI" target="_blank">GitHub</a>
+Sources: <a href="https://github.com/wokhan/Wokhan.UI" target="_blank">GitHub</a>
 <br/>
 Documentation: not available yet
 
 <h2>Wokhan.Data.Providers</h2>
-Sources: <a href="https://github.com/wokhansoft/Wokhan.Data.Providers" target="_blank">GitHub</a>
+Sources: <a href="https://github.com/wokhan/Wokhan.Data.Providers" target="_blank">GitHub</a>
 <br/>
-Documentation: <a href="https://docs.wokhan.com/Wokhan.Data.Providers/generated/Wokhan.Data.Providers.html" target="_blank">docs.wokhan.com</a>
+Documentation: <a href="https://wokhan.github.io/Wokhan.Data.Providers/generated/Wokhan.Data.Providers.html" target="_blank">here</a>
 
 <h2>Wokhan.WebControls</h2>
 Legacy library for ASP.NET.
 <br/>
-Sources: <a href="https://github.com/wokhansoft/Wokhan.WebControls" target="_blank">GitHub</a>
+Sources: <a href="https://github.com/wokhan/Wokhan.WebControls" target="_blank">GitHub</a>
 <br/>
 Documentation: not available yet
