--- a/content/home.html
+++ b/content/home.html
@@ -1,16 +1,3 @@
-﻿<div id="headercontainer">
-    <img id="headerlogo" src="content/assets/logo_full.png" title="Simple solutions for various needs" />
-    <!--<img style="width:100%; margin-top: -320px" src="content/assets/mindmap-2123973_1920.jpg" />-->
-    <div id="headertext">
-        <div style="font-size:larger">Analyze</div>
-        <div style="margin-left: 90px; font-size:larger; font-style: italic">Think</div>
-        <div style="font-size:large; margin-left: 20px">Create</div>
-        <div style="font-size:larger; margin-left: 70px">Simplify</div>
-        <div style="font-size:larger; font-style: italic; margin-left: -10px">Solve</div>
-        <div style="font-size:large; margin-left: 90px">Evolve</div>
-        <div style="font-size:larger; margin-left: 50px">Transform</div>
-    </div>
-</div>
 <div class="homelayout">
     <div class="leftcolumn">
         <h2><i class="far fa-lightbulb"></i>
@@ -20,13 +7,6 @@
 
         <h2><i class="fas fa-search"></i>
             What you will find here</h2>
-        This site only presents a subset of what has been created by Wokhan Solutions. Some are deprecated (see the Archives page), others are simply not ready for a public release (and are kept secret as of now! ;-) ).
-        As everything alive, content will not remain static and will evolve for the years to come.
-    </div>
-    <div class="tweets">
-        <h2><i class="fab fa-twitter"></i>
-            Latest Tweets</h2>
-        <a class="twitter-timeline" data-lang="en" href="https://twitter.com/wokhansoft?ref_src=twsrc%5Etfw">Tweets by wokhansoft</a>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        This website presents some apps I created during many years as a hobby and wanted to share with the community. 
     </div>
 </div>
