--- a/content/home.html
+++ b/content/home.html
@@ -1,12 +1,7 @@
-<div class="homelayout">
-    <div class="leftcolumn">
-        <h2><i class="far fa-lightbulb"></i>
-            Philosophy</h2>
+<h2><i class="far fa-lightbulb"></i>
+ Why this website?</h2>
         <blockquote>If a solution does not exist yet, it does not mean there will never be any, but that it still has to be invented.</blockquote>
-        Wokhan Solutions applications have been created when no convincing alternatives exist, and were not only created for others but also because of actual personal needs.
-
-        <h2><i class="fas fa-search"></i>
-            What you will find here</h2>
-        This website presents some apps I created during many years as a hobby and wanted to share with the community. 
+        This website presents some applications I created during many years as a hobby and wanted to share with the community. 
+        Those applications have been created when no convincing alternatives exist (or I wasn't able to find them...), and were not only created for others but also because of actual personal needs. 
     </div>
 </div>
