Updated home and about page

--- a/content/home.html
+++ b/content/home.html
@@ -1,7 +1,18 @@
 <h2><i class="far fa-lightbulb"></i>
  Why this website?</h2>
-        <blockquote>If a solution does not exist yet, it does not mean there will never be any, but that it still has to be invented.</blockquote>
-        This website presents some applications I created during many years as a hobby and wanted to share with the community. 
-        Those applications have been created when no convincing alternatives exist (or I wasn't able to find them...), and were not only created for others but also because of actual personal needs. 
+        This website presents some applications I created on my free time during the last 20 years as a hobby and wanted to share with the community. 
+        <br />
+        Those applications have been created when no convincing alternatives exist (or I wasn't able to find them...), and were not only created for others but also because of actual personal needs.
+        <br />
+        You will find some details about the following apps:
+        <ul>
+            <li>QuAnalyzer: a data analysis/browsing/comparison tool, supporting virtually any source through data providers.</li>
+            <li>WFN: a well known Windows firewall extender.</li>
+            <li>SmartTiles: a now deprecated app for Windows 10 / Windows 10 Mobile to create customized live tiles (firstly for Outlook, then for any datasource).</li>
+            <li>Wokhan.Core: a library for .NET Standard / .NET Core/5+</li>
+            <li>Wokhan.UI: a library for WPF or UWP UI frameworks.</li>
+            <li>Wokhan.DataProviders: a library used by QuAnalyzer and other apps to generically access to various datasources.</li>
+            <li>And some others you'll find through this site menu.</li>
+        </ul>
     </div>
 </div>
