Oops, files were not indexed... Added QuAnalyzer page and slightly updated H2 title style.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
         <div id="home" class="page" data-external-contentid="home" data-external-defer="true" data-modules-menu title="Home" data-menu-image="fas fa-home"></div>
         <div id="software" title="Software" data-modules-menu data-menu-image="far fa-window-restore">
+            <div id="software_quanalyzer" class="page" data-external-contentid="software_quanalyzer" data-external-defer="true" data-modules-menu title="QuAnalyzer" data-description="A tool to compare, analyze, test... heterogeneous data sources" data-menu-image="content/assets/quanalyzer.png"></div>
             <div id="software_wfn" class="page" data-external-contentid="software_wfn" data-external-defer="true" data-modules-menu title="WFN" data-description="A simple yet powerful Windows embedded firewall extender" data-menu-image="content/assets/wfn.png"></div>
             <div id="software_tiles" class="page" data-external-contentid="software_tiles" data-external-defer="true" data-modules-menu title="Smart Tiles" data-description="The ultimate live tile for the Windows UWP calendar" data-menu-image="content/assets/tiles.png"></div>
             <div id="software_dwsd" class="page" data-external-contentid="software_dwsd" data-external-defer="true" data-modules-menu title="Dynamic Web Service Driver for LINQPad" data-description="An additional driver for the LINQPad tool" data-menu-image="content/assets/LINQPad.png"></div>
@@ -39,7 +40,7 @@
     <div class="footer">
         &copy; Wokhan Solutions 2017 - All rights reserved. Hosted on GitHub 
         <div style="float:right; padding: 5px">
-            <iframe title="Twitter Follow Button" class="twitter-follow-button twitter-follow-button-rendered" id="twitter-widget-0" src="https://platform.twitter.com/widgets/follow_button.c6def25548e9590b13abaa1b3330b811.en.html#dnt=false&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=wokhansoft&amp;show_count=false&amp;show_screen_name=true&amp;size=m&amp;time=1475776194226" frameborder="0" scrolling="no" style="width: 133px; height: 20px; visibility: visible; position: static;" allowtransparency="true" data-screen-name="wokhansoft"></iframe>
+            <iframe title="Twitter Follow Button" class="twitter-follow-button twitter-follow-button-rendered" id="twitter-widget-0" src="https://platform.twitter.com/widgets/follow_button.c6def25548e9590b13abaa1b3330b811.en.html#dnt=false&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=jrm_slb&amp;show_count=false&amp;show_screen_name=true&amp;size=m&amp;time=1475776194226" frameborder="0" scrolling="no" style="width: 133px; height: 20px; visibility: visible; position: static;" allowtransparency="true" data-screen-name="jrm_slb"></iframe>
             <!--<script src="http://platform.twitter.com/widgets.js" charset="utf-8" async=""></script>-->
         </div>
     </div>
