--- a/content/software_wfn.html
+++ b/content/software_wfn.html
@@ -7,7 +7,7 @@
             The reknown open-source Windows Firewall extender!<br />
             Please note that WFN is maintained by the open-source community at GitHub (well, not all of it, we're only 3 😉).
 <h2 class="getit">How to get it</h2>
-WFN is available on <a href="http://www.github.com/wokhansoft/wfn">GitHub</a>
+WFN is available on <a href="http://www.github.com/wokhan/wfn">GitHub</a>
 <h2 class="features">Features</h2>
 <ul>
     <li>Connections listing</li>
