--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Wokhan Solutions</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style/style.css" />
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
     <script src="https://kit.fontawesome.com/ef44d9881b.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="serverless/core.js" defer data-serverless-script="normal" data-modules="menu,imageboard,external"></script>
+    <script id="serverlesscore" type="text/javascript" src="serverless/core.js" defer data-serverless-script="normal" data-modules="menu,imageboard,external"></script>
 </head>
 <body>
     <div id="container">
